fix/toolbar-width-overflow (#26)
* fix: toolbar overflow

* chore: cleanup

--- a/apps/web/src/component/organisms/menu/Menu.module.scss
+++ b/apps/web/src/component/organisms/menu/Menu.module.scss
@@ -4,8 +4,8 @@
 
 .container {
 	position: absolute;
-	top: 4px;
-	right: 0;
+	top: 48px;
+	right: 16px;
 	z-index: 1;
 
 	display: flex;
